feat: implement prices and sizes logic

--- a/Cafe.Application/Cafe.Application.csproj
+++ b/Cafe.Application/Cafe.Application.csproj
@@ -15,4 +15,9 @@
     <ProjectReference Include="..\Cafe.Domain\Cafe.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Usecases\Prices\Queries\Handlers\" />
+    <Folder Include="Usecases\Prices\Queries\Requests\" />
+  </ItemGroup>
+
 </Project>
